refactored "Affectation" class + updated getters in frontend